# Cryptrix

./: .env.example  .gitignore  .pre-commit-config.yaml  Crypto Ai Platform Project Blueprint (1).docx  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
airflow/dags/: market_etl_dag.py  ml_retrain_dag.py  sentiment_dag.py
api/fastapi_service/: config.py  main.py
api/fastapi_service/routers/: market.py  predictions.py  sentiment.py
api/fastapi_service/schemas/: models.py
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: market.py  predict.py
backend/app/core/: database.py  websocket.py
backend/app/models/: schemas.py
backend/app/utils/: logger.py
dashboard/streamlit_app/: app.py
dashboard/streamlit_app/components/: charts.py  metrics.py
dashboard/streamlit_app/pages/: 1_Market.py  2_Predictions.py  3_Sentiment.py
data_engineering/airflow/dags/: btc_hourly_etl_dag.py  social_sentiment_dag.py
data_engineering/pipelines/: __init__.py
data_engineering/pipelines/ingestion/: binance_client.py
data_engineering/pipelines/transformation/: features.py
docker/: Dockerfile.api  Dockerfile.dashboard  airflow.Dockerfile
frontend/: Dockerfile  next.config.js  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/types/: index.ts
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
ml/: pyproject.toml
ml/inference/: predict.py
ml/training/: xgboost_classifier.py
models/inference/: predict.py
models/training/: prophet_trainer.py  xgboost_trainer.py
monitoring/prometheus/: prometheus.yml
pipelines/ingestion/: binance_client.py  coingecko_client.py  sentiment_client.py
pipelines/loaders/: local_loader.py
pipelines/transformation/: cleaner.py  features.py
utils/: __init__.py
