[project]
name = "cryptrix"
version = "0.1.0"
description = "Realtime Crypto Intelligence and AI Prediction Platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Cryptrix Team", email = "engineering@cryptrix.ai" }
]
dependencies = [
    # API Dependencies
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic[email]>=2.6.4",
    "pydantic-settings>=2.2.1",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.3",
    "websockets>=12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Data & ETL Dependencies
    "pandas>=2.2.1",
    "numpy>=1.26.4",
    "requests>=2.31.0",
    "google-cloud-storage>=2.15.0",
    "google-cloud-bigquery>=3.18.0",
    "great-expectations>=0.18.12",
    
    # Machine Learning Dependencies
    "xgboost>=2.0.3",
    "prophet>=1.1.5",
    "mlflow>=2.11.1",
    "scikit-learn>=1.4.1.post1",
    
    # Airflow (Optional for local pipelines)
    "apache-airflow>=2.9.1"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.2",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.3.0",
    "pre-commit>=3.6.2",
    "black>=24.2.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0"
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["E501"] # Ignore long lines (handled by formatter)

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["backend", "data_engineering", "ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
