[project]
name = "cryptrix"
version = "0.1.0"
description = "Crypto AI Platform — End-to-End Analytics & Prediction System"
requires-python = ">=3.11"

dependencies = [
    # --- Core ---
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # --- Data Ingestion ---
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "websockets>=12.0",

    # --- Data Processing ---
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",

    # --- Data Validation ---
    "great-expectations>=0.18.0",

    # --- ML Models ---
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
    "prophet>=1.1.5",

    # --- MLOps ---
    "mlflow>=2.13.0",

    # --- API Serving ---
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",

    # --- Dashboard ---
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "streamlit-autorefresh>=1.0.1",

    # --- Orchestration ---
    "apache-airflow>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
