[project]
name = "cryptrix-backend"
version = "0.1.0"
description = "FastAPI Backend Service for Cryptrix"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic[email]>=2.6.4",
    "pydantic-settings>=2.2.1",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.3",
    "websockets>=12.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.27.0"
]
